--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Евклид</title>
-  <link rel="stylesheet" href="css/normalaiz.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/swiper-bundle.min.css">
-  <script src="js/swiper-bundle.min.js"></script>
-  <link rel="stylesheet" href="css/jquery-ui.css">
-  <script src="js/jquery-3.6.0.js"></script>
-  <script src="js/jquery-ui.js"></script>
+  <link rel="stylesheet" href="normalaiz.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="swiper-bundle.min.css">
+  <script src="swiper-bundle.min.js"></script>
+  <link rel="stylesheet" href="jquery-ui.css">
+  <script src="jquery-3.6.0.js"></script>
+  <script src="jquery-ui.js"></script>
 
   <style>
     /* .menu {
