--- a/index.html
+++ b/index.html
@@ -664,10 +664,10 @@
   <div class="container flex header__container">
     <a href="#" class="header__logo" aria-label="На главную страницу">
       <picture alt="Logo" aria-label="На главную страницу">
-        <source srcset="/img/Logo-1024.png" media="(min-width: 801px) and (max-width: 1024px)" aria-label="На главную страницу">
-        <source srcset="/img/Logo-768.png" media="(min-width: 321px) and (max-width: 768px)" aria-label="На главную страницу">
-        <source srcset="/img/Logo-320.png" media="(min-width: 250px) and (max-width: 320px)" aria-label="На главную страницу">
-      <img src="/img/Logo.png" class="header__logo" alt="Logo" aria-label="На главную страницу">
+        <source srcset="Logo-1024.png" media="(min-width: 801px) and (max-width: 1024px)" aria-label="На главную страницу">
+        <source srcset="Logo-768.png" media="(min-width: 321px) and (max-width: 768px)" aria-label="На главную страницу">
+        <source srcset="Logo-320.png" media="(min-width: 250px) and (max-width: 320px)" aria-label="На главную страницу">
+      <img src="Logo.png" class="header__logo" alt="Logo" aria-label="На главную страницу">
     </picture>
     </a>
     <nav class="header__nav">
@@ -781,7 +781,7 @@
       <div class="swiper-wrapper">
     <!-- Slides -->
         <div class="swiper-slide">
-          <img src="img/hero.jpg" alt="" class="hero__img">
+          <img src="hero.jpg" alt="" class="hero__img">
           <div class="descr hero__content flex">
             <h1 class="hero__title">
               Проектные решения любой сложности
@@ -798,7 +798,7 @@
         </div>
 
     <div class="swiper-slide">
-      <img src="img/hero1.jpg" alt="" class="hero__img">
+      <img src="hero1.jpg" alt="" class="hero__img">
       <div class="descr hero__content flex">
         <h1 class="hero__title">
           Проектные решения любой сложности
@@ -815,7 +815,7 @@
     </div>
 
     <div class="swiper-slide">
-      <img src="img/hero2.jpg" alt="" class="hero__img">
+      <img src="hero2.jpg" alt="" class="hero__img">
       <div class="descr hero__content flex">
         <h1 class="hero__title">
           Проектные решения любой сложности
@@ -872,13 +872,13 @@
         <div class="about__content2">
           <div class="about__content2-1 flex">
             <picture alt="">
-                 <source srcset="/img/about2-320.svg" media="(min-width: 320px) and (max-width: 767px)">
-                 <source srcset="/img/about2-768.svg" media="(min-width: 768px) and (max-width: 1023px)">
-                 <source srcset="/img/about2-1024.svg" media="(min-width: 1024px) and (max-width: 1299px)">
-                 <source srcset="/img/about2-1024.svg" media="(min-width: 1300px) and (max-width: 1399px)">
-                 <source srcset="/img/about2-1024.svg" media="(min-width: 1400px) and (max-width: 1919px)">
-                 <source srcset="/img/about2.svg" media="(min-width: 1921px) and (max-width: 2999px)">
-                 <img src="/img/about2.svg" alt="" class="about__content2-img">
+                 <source srcset="about2-320.svg" media="(min-width: 320px) and (max-width: 767px)">
+                 <source srcset="about2-768.svg" media="(min-width: 768px) and (max-width: 1023px)">
+                 <source srcset="about2-1024.svg" media="(min-width: 1024px) and (max-width: 1299px)">
+                 <source srcset="about2-1024.svg" media="(min-width: 1300px) and (max-width: 1399px)">
+                 <source srcset="about2-1024.svg" media="(min-width: 1400px) and (max-width: 1919px)">
+                 <source srcset="about2.svg" media="(min-width: 1921px) and (max-width: 2999px)">
+                 <img src="about2.svg" alt="" class="about__content2-img">
                 </picture>
 
             <div class="about__content2-1-text">
@@ -890,13 +890,13 @@
           </div>
           <div class="about__content3-1 flex">
             <picture alt="">
-              <source srcset="/img/about3-320.svg" media="(min-width: 320px) and (max-width: 767px)">
-              <source srcset="/img/about3-768.svg" media="(min-width: 768px) and (max-width: 1023px)">
-              <source srcset="/img/about3-1024.svg" media="(min-width: 1024px) and (max-width: 1299px)">
-              <source srcset="/img/about3-1024.svg" media="(min-width: 1300px) and (max-width: 1399px)">
-              <source srcset="/img/about3-1024.svg" media="(min-width: 1400px) and (max-width: 1919px)">
-              <source srcset="/img/about3.svg" media="(min-width: 1921px) and (max-width: 2999px)">
-              <img src="/img/about3.svg" alt="" class="about__content3-img">
+              <source srcset="about3-320.svg" media="(min-width: 320px) and (max-width: 767px)">
+              <source srcset="about3-768.svg" media="(min-width: 768px) and (max-width: 1023px)">
+              <source srcset="about3-1024.svg" media="(min-width: 1024px) and (max-width: 1299px)">
+              <source srcset="about3-1024.svg" media="(min-width: 1300px) and (max-width: 1399px)">
+              <source srcset="about3-1024.svg" media="(min-width: 1400px) and (max-width: 1919px)">
+              <source srcset="about3.svg" media="(min-width: 1921px) and (max-width: 2999px)">
+              <img src="about3.svg" alt="" class="about__content3-img">
              </picture>
 
             <div class="about__content3-1-text">
@@ -1084,8 +1084,8 @@
           <div class="footer__content1">
             <a href="#" class="footer__logo" aria-label="На главную страницу">
               <picture alt="Logo-footer">
-                <source srcset="/img/Logo-footer-320.png" media="(min-width: 250px) and (max-width: 320px)" aria-label="На главную страницу">
-                <img src="/img/Logo-footer.png" class="footer__logo-img" alt="Logo footer" aria-label="На главную страницу">
+                <source srcset="Logo-footer-320.png" media="(min-width: 250px) and (max-width: 320px)" aria-label="На главную страницу">
+                <img src="Logo-footer.png" class="footer__logo-img" alt="Logo footer" aria-label="На главную страницу">
             </picture>
             </a>
           <div class="footer__content1-list flex">
